--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,30 @@
-[package]
-name = "cosmwasm-halo2"
+[workspace]
+members = ["packages/*", "contracts/cw-halo2-verifier"]
+
+[workspace.package]
 version = "0.1.0"
 edition = "2021"
 authors = ["whalelephant <email-me@belsy.space>"]
+repository = "https://github.com/whalelephant/cw-halo2" 
+keywords = ["cosmwasm", "halo2", "pse"] 
 
+[workspace.dependencies]
+cosmwasm-schema = "1.2"
+cw-utils = "1"
+cw-storage-plus = "1.1"
+cosmwasm-std = "1.2"
+cw2 = "1.0"
+thiserror = "1"
 
-[lib]
-name = "cw_halo2_verifier"
-path = "src/lib.rs"
+[profile.release.package.cw-halo2-verifier]
+codegen-units = 1
+incremental = false
 
-[[bin]]
-name = "cw_halo2_bin"
-path = "src/bin.rs"
+[profile.release]
+rpath = false
+lto = true
+overflow-checks = true
+opt-level = 3
+debug = false
+debug-assertions = false
 
-[dependencies]
-# noir_halo2_backend_pse = { git = "https://github.com/Ethan-000/halo2_backend", branch = "0.1.2" }
-# noir_halo2_backend_common = { git = "https://github.com/Ethan-000/halo2_backend", branch = "0.1.2" }
-noir_halo2_backend_pse = { path = "../halo2_backend/crates/noir_halo2_backend_pse"}
-noir_halo2_backend_common= { path = "../halo2_backend/crates/noir_halo2_backend_common"}
-acvm = "0.15.0"
-pse_halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", package = "halo2wrong", tag = "v2023_04_20", features = [
-    "circuit-params",
-] }
-nargo_halo2 = { git = " https://github.com/Ethan-000/noir", branch = "demo-0.1.2", package = "nargo"}
-noirc_abi = { git = " https://github.com/Ethan-000/noir", branch = "demo-0.1.2" }
-serde = { version = "1.0.136", features = ["derive"] }
-serde_json = "1.0"
-hex = "0.4.2"
