--- a/packages/halo2-verifier/Cargo.toml
+++ b/packages/halo2-verifier/Cargo.toml
@@ -14,16 +14,17 @@ name = "halo2_verifier_bin"
 path = "src/bin.rs"
 
 [dependencies]
-noir_halo2_backend_pse = { git = "https://github.com/whalelephant/halo2_backend", branch = "0.1.2" }
-noir_halo2_backend_common = { git = "https://github.com/whalelephant/halo2_backend", branch = "0.1.2" }
-# noir_halo2_backend_common = { path = "../../../halo2_backend/crates/noir_halo2_backend_common"}
-# noir_halo2_backend_pse = { path = "../../../halo2_backend/crates/noir_halo2_backend_pse", default-features = false, features = ["cosmwasm"]}
-acvm = "0.15.0"
-pse_halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", package = "halo2wrong", tag = "v2023_04_20", features = [
-    "circuit-params",
-] }
-nargo_halo2 = { git = " https://github.com/Ethan-000/noir", branch = "demo-0.1.2", package = "nargo"}
-noirc_abi = { git = " https://github.com/Ethan-000/noir", branch = "demo-0.1.2" }
-serde = { version = "1.0.136", features = ["derive"] }
-serde_json = "1.0"
-hex = "0.4.2"
+#noir_halo2_backend_pse = { git = "https://github.com/whalelephant/halo2_backend", branch = "0.1.2", default-features = false, features = ["cosmwasm"] }
+#noir_halo2_backend_common = { git = "https://github.com/whalelephant/halo2_backend", branch = "0.1.2", default-features = false, features = ["cosmwasm"]  }
+# noir_halo2_backend_common = { path = "../../../halo2_backend/crates/noir_halo2_backend_common", default-features = false, features = ["cosmwasm"]}
+#noir_halo2_backend_pse = { path = "../../../halo2_backend/crates/noir_halo2_backend_pse", default-features = false, features = ["cosmwasm"]}
+# acvm = "0.15.0"
+# pse_halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", package = "halo2wrong", tag = "v2023_04_20", features = [
+#     "circuit-params",
+# ] }
+pse_halo2wrong = { path = "../../../halo2wrong/halo2wrong", package = "halo2wrong", default-features = false }
+#nargo_halo2 = { git = " https://github.com/Ethan-000/noir", branch = "demo-0.1.2", package = "nargo"}
+#noirc_abi = { git = " https://github.com/Ethan-000/noir", branch = "demo-0.1.2" }
+#serde = { version = "1.0.136", features = ["derive"] }
+#serde_json = "1.0"
+#hex = "0.4.2"
